Solved gap in rainbow; added dat.gui control panel; added save in url;

--- a/soundtrip/style.css
+++ b/soundtrip/style.css
@@ -8,3 +8,7 @@ html {
   padding: 0;
   overflow: hidden;
 }
+
+canvas {
+  cursor:move;
+}
